# machine_learning_CPP

./: README.md  settings.json
C++_MUKOEDO_LIB/Shark_clone/Shark-3.0.0/: DartConfiguration.tcl  cmake_uninstall.cmake
C++_MUKOEDO_LIB/Shark_clone/Shark-3.0.0/include/: Makefile  cmake_install.cmake
C++_MUKOEDO_LIB/Shark_clone/Shark-3.0.0/src/: cmake_install.cmake
Chapter1/: README.txt
Chapter1/Dlib/: CMakeLists.txt  README.txt  a.out  linalg_dlib.cpp  linreg_dlib.cpp
Chapter1/Eigen/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  algorithm_eigen.cpp  algorithm_regres.cpp  cmake_install.cmake
Chapter1/Shogun/: README.txt  install_and_symbolic_linking.txt  shogun_sample.cpp
Chapter1/XTensor/: x_tesnor1.cpp
Chapter1/sharkML/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Chapter2/csv/cpp/: .~lock.price_data_until_CPC.csv#  CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  csv.cpp  csv_sample  docu.txt  output.txt  price.csv
Chapter2/csv/dlib/: CMakeLists.txt  README.txt  csv_dlib.cc  data.csv
Chapter2/data/Math590_project_price_data_until_CPC_files/: 69023906(2)
Chapter2/hdf5/cpp/: README.txt  hdf5.cpp  mkft.txt
Chapter2/hdf5/cpp/resources/: output.txt  review.json  reviews.h5
Chapter2/image/dlib/: CMakeLists.txt  README.md  img_dlib.cpp
Chapter2/image/opencv/: README.md  README.txt  ocv.cpp
Chapter2/json/cpp/: README.txt  json.cc  paper.h  review.h  reviewsreader.cpp  reviewsreader.h  tst1.cc
Chapter2/json/cpp/resources/: output.txt
Chapter2/json/documents/: README.txt  index.html  user.json
Chapter3/: README.txt
Chapter3/Dlib/: CMakeLists.txt  README.txt  grid_dlib.cpp
Chapter3/choosing_the_metrics_for_ML_models/: example1.py
Chapter4/: README.txt
Chapter4/DBSCAN/: CMakeLists.txt  DBSCAN_python.ipynb  README.txt  dbscan_cluster.cpp  dlib_cluster.cpp
Chapter4/DBSCAN/.ipynb_checkpoints/: DBSCAN_python-checkpoint.ipynb  README-checkpoint.txt  make_blob-checkpoint.py
Chapter4/DBSCAN_CPP/: README.md
Chapter4/GMM/: GMM_python.ipynb  README.md  Untitled.ipynb  result.txt
Chapter4/GMM_CPP/: GMM.h  KMeans.h  README.md  a.out
Chapter4/dlib/: CMakeLists.txt  README.txt  dlib_cluster.cpp  result.txt
Chapter4/dlib/functions_base/: DoGraphClustering.cpp  DoGraphNewManClustering.cpp  DoHierarhicalClustering.cpp  DoKMeansClustering.cpp  DoSpectralClustering.cpp  PlotClusters.h  README.txt  config_and_alias.cpp
Chapter4/documents/: hierarchical_clustering_algorithms.txt  sample_pair_abstract.h  spectral_clustering_algorithms.txt
Chapter5/: README.md  README.txt
Chapter5/dlib/: CMakeLists.txt  dlib_anomaly.cc  isolation_forest.h
Chapter5/documents/: One-Class-SVM.txt  Z_test.txt
Chapter6/: feature_selection_methods.txt
Chapter6/dlib/: CMakeLists.txt  README.txt  dlib_dr.cc  dlib_dr1.cc  matrix_utilities.txt  mem_manager.txt
Chapter6/dlib/documents/: array2d_document.txt  diag.txt  enumerable_document.txt  matrix.txt  matrix_exp.txt  matrix_utilities.txt  reshape_to_column_vector.txt  vector_normalizer_pca.txt
Chapter6/documents/: linear_discriminant_analysis.txt  overview.txt  sammon_mapping.txt
Chapter6/sharkML/: CMakeLists.txt  README.md  tst1.cpp
Chapter7/: README.txt  SVM_method.txt
Chapter7/dlib/: CMakeLists.txt  README.txt  dlib_classify.cc
Chapter7/dlib/documents/: any_trainer.txt  kernels.txt  krr_trainer.txt  one_vs_one_decision_function.txt  one_vs_one_trainer.txt  subm_clipped.txt  svm_nu_trainer.txt
Chapter7/learning_notes/: knn_method.txt
Chapter7/sharkML/: CMakeLists.txt  README.md  sharkml_classify.cc  sharkml_classify.cpp
Chapter7/sharkML/documents/: AbstractNearestNeighbors.txt  BinaryTree.txt  ClassificationDataset.txt  GaussianRbfKernel.txt  InputLabelBatch.txt  KDTree.txt  LabeledData.txt  LinearClassifier.txt  OneVersusOneClassifier.txt  RegressionDataset.txt  TreeNearestNeighbors.txt  ZeroOneLoss.txt  binarySubProblem.txt  inheritance.txt
Chapter7/sharkML/serializations/: chap7_sharkml_knn.model
Chapter7/shogun/: README.md
Chapter8/learning_notes/: prelude.txt
other/: popen.txt
real_shogun_test/: CMakeCache.txt  CMakeLists.txt  CMakeLists0.txt  CMakeLists1.txt  Makefile  README.md  a.out  cmake_install.cmake  shogun_test.cc  shogun_test.cpp
shogun_test/: README.txt  mkft.txt  mkft1.cpp  tst1.cpp
