cmake_minimum_required(VERSION 3.10)
project(tst1)
find_package(Boost 1.71.0 COMPONENTS system filesystem serialization REQUIRED)
set(CMAKE_CXX_FLAGS "-std=c++17 -msse3 -fopenmp -lstdc++fs -fpermissive -lcblas -lpthread -lboost_serialization -lboost_system")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -lcblas -lboost_serialization -lboost_system")
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -lcblas -lboost_serialization -lboost_system")
set(Boost_USE_MULTITHREADED ON)
include_directories($HOME/projects/opencv/build/include )
include_directories(/home/zcw/C++_MUKOEDO_LIB/Shark_clone/Shark/include)
include_directories(/usr/local/include ${OPENSSL_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
if (CURL_FOUND)
    include_directories(${CURL_INCLUDE_DIRS})
    add_definitions(-DHAVE_CURL)
endif()
add_executable(linalg-shark  "linalg_shark.cc")
target_link_libraries(linalg-shark shark cblas)

add_executable(linreg-shark  "linreg_shark.cc")
target_link_libraries(linreg-shark shark cblas ${Boost_LIBRARIES} )
